# zhipu-vision-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/zhipu_vision_mcp/: __init__.py  server.py
tests/: test_server.py
