[project]
name = "zhipu-vision-mcp"
version = "0.1.0"
description = "MCP Server for vision understanding powered by ZhipuAI GLM-4.6V"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "JiaoBingJie" },
]
keywords = ["mcp", "zhipuai", "vision", "llm", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp[cli]>=1.6.0,<2",
    "zhipuai>=2.0.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
zhipu-vision-mcp = "zhipu_vision_mcp.server:main"

[project.urls]
Homepage = "https://github.com/JiaoBingJie/zhipu-vision-mcp"
Repository = "https://github.com/JiaoBingJie/zhipu-vision-mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zhipu_vision_mcp"]
